# bookstore

./: .env.example  .gitignore  pyproject.toml
app/: alembic.ini  settings.py
app/commands/: fake_author.py  get_session.py
app/database/: __init__.py  env.py
app/database/models/: __init__.py  author.py  book.py  book_author.py  book_category.py  book_publishing_house.py  category.py  publishing_house.py  subcategory.py  user.py
app/database/models/mixins/: __init__.py  mysql_primary_key.py  mysql_role_user.py
app/database/versions/: 22f38c333645_add_table_users.py  29fe4ce6890d_add_table_books_authors.py  734840390e3b_add_table_books_categories.py  7d66e77ac75d_add_field_in_table_category.py  945c81bba084_add_table_books.py  a3a03e1f9d9f_add_table_authors.py  dd26cb581761_add_table_subcategories.py  e2226956677a_add_table_categories.py  e45f72210b16_add_table_publipublishing_houses.py  f6472191f228_add_table_books_publishing_houses.py
app/utils/: __init__.py  get_project_settings.py  mysql_connection_string.py  sql_execute.py
