[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Stanislav Polos <polos_s@groupbwt.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.7"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
python-dotenv = "^0.20.0"
dotenv-linter = "^0.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
mysqlclient = "^2.1.0"
pydantic = "^1.9.0"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
